# structify

./: README.md  pyproject.toml
enrichment/: configuration.py  graph.py  utils.py
supabase/: select_data.py  supabase_db.py
